# recommendation_system_ecoturism_app

./: README.md  pyproject.toml
data/: IUCN_species.csv  NATURA_habitat.csv  coincidencias.json
data/boe/: BOE-A-2007-18475-responsabilidad medioambiental.md
data/chunks/: chunks.json
emissions/: Registro de emisiones.txt  emissions.csv
prompts/: deportistas.md  familiar.md  impacto_ambiental.md  naturalistas.md
reports/: report_ENP_info.json  report_flora_info.json  report_habitats_info.json  report_routes_info.json  report_species_info.json
rutas/: rutas_43.291596,-5.6993772  rutas_43.297165,-5.684745  rutas_43.297237,-5.684749  rutas_43.297269,-5.684442  rutas_43.2973,-5.684318  rutas_43.297443,-5.68415  rutas_43.3199,-1.9247
scripts/: REDNATURA_site_code.py  app.py  coord_geopy.py  create_embeddings_index.py  display_info.py  flora_images.py  get_routes_komoot.py  llm_requests.py  match_codes_for_description.py  match_especies_eidos_id.py  process_all_info.py  rag.py  search_ENP.py  search_NATURAsite_code.py  search_especies.py  search_habitat.py  tag.py
vectorial_database/: index.faiss  index.pkl
